--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,16 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorDarkGrey">#222222</color>
+    <color name="colorGrey">#404040</color>
+    <color name="colorLightGrey">#737373</color>
+    <color name="colorWhite">#FFFFFF</color>
+
+    <color name="colorPurple">#B029DF</color>
+    <color name="colorGreen">#1EC57E</color>
+    <color name="colorYellow">#FFE111</color>
+    <color name="colorRed">#E2594E</color>
 
     <color name="bottomNavItemColor">#03DAC5</color>
 </resources>
