YTG-#10 [공통][툴바] 공통 툴바 화면 개발
- 기본 툴바 (로고)
- 백스페이스 툴바 (뒤로가기)

--- a/features/home/src/main/res/layout/fragment_home.xml
+++ b/features/home/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        
+        <ImageView
+            android:src="@drawable/az_logo_toolbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
