YTG-#10 [공통][툴바] 툴바 연결 샘플 제작 (버그 있음)
- 메인페이지에서 툴바로 마이페이지 갈 수 있게 연결
- 툴바가 적용이 안되는 버그가 하나 있음..

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -18,7 +18,8 @@
 
     <fragment
         android:id="@+id/myPageFragment"
-        android:name="com.az.mypage.ui.views.MyPageFragment">
+        android:name="com.az.mypage.ui.views.MyPageFragment"
+        app:moduleName="mypage">
 
     </fragment>
 </navigation>
