--- a/app/src/main/res/layout/backspace_toolbar.xml
+++ b/app/src/main/res/layout/backspace_toolbar.xml
@@ -3,19 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="85dp"
-    android:background="@color/colorDarkGrey">
+    android:background="@color/colorDarkGrey"
+    android:paddingStart="31dp">
 
     <ImageView
-        android:id="@+id/img_back_button"
+        android:id="@+id/img_backspace_back_button"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:layout_marginStart="31dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/txt_backspace_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
@@ -23,7 +24,24 @@
         android:text="회원가입"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
-        app:layout_constraintStart_toEndOf="@+id/img_back_button"
+        app:layout_constraintStart_toEndOf="@+id/img_backspace_back_button"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/layout_backspace_delete_button_wrap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="31dp"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/img_delete_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/delete_button" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
