--- a/app/src/main/res/layout/default_toolbar.xml
+++ b/app/src/main/res/layout/default_toolbar.xml
@@ -15,10 +15,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/layout_default_delete_button_wrap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="31dp"
+        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -30,13 +32,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/layout_button_wrap"
+        android:id="@+id/layout_default_button_wrap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="27dp"
         android:orientation="horizontal"
-        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
