YTG-#8 [메인][레이아웃] 등급 textview 에 bold 속성 추가

--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -15,11 +15,12 @@
         <TextView
             android:id="@+id/user_grade"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="85dp"
-            android:layout_height="wrap_content"
             android:textColor="@color/colorWhite"
             android:textSize="45dp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="유머쪼랩ㅋ" />
