--- a/features/main/src/main/res/drawable/rounded_background_for_humor_count.xml
+++ b/features/main/src/main/res/drawable/rounded_background_for_humor_count.xml
@@ -3,7 +3,5 @@
     android:shape="rectangle">
 
     <corners android:radius="25dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorWhite" />
+    <solid android:color="@color/colorGrey" />
 </shape>
