YTG-#9 [로그인][세팅] 로그엔 페이지 초기 세팅

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -21,4 +21,10 @@
         android:name="com.az.mypage.ui.views.MyPageFragment">
 
     </fragment>
+
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.az.login.LoginFragment">
+
+    </fragment>
 </navigation>
