--- a/app/src/main/res/layout/backspace_toolbar.xml
+++ b/app/src/main/res/layout/backspace_toolbar.xml
@@ -21,14 +21,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
         android:layout_marginTop="32dp"
-        android:text="회원가입"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
         app:layout_constraintStart_toEndOf="@+id/img_backspace_back_button"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/layout_backspace_delete_button_wrap"
+        android:id="@+id/layout_backspace_close_button_wrap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
@@ -38,7 +37,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/img_delete_button"
+            android:id="@+id/img_close_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/delete_button" />
