YTG-#8 [메인][레이아웃] main_nav_graph.xml 에 mainFragment 추가 및 startDestination 으로 지정

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -2,7 +2,13 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/mainFragment">
+
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.az.main.MainFragment">
+
+    </fragment>
 
     <fragment
         android:id="@+id/homeFragment"
