--- a/features/main/src/main/res/drawable/rounded_background_for_humor_card.xml
+++ b/features/main/src/main/res/drawable/rounded_background_for_humor_card.xml
@@ -2,6 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="50dp" />
+    <corners
+        android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"
+        android:topLeftRadius="50dp"
+        android:topRightRadius="50dp" />
     <solid android:color="@color/colorGrey" />
 </shape>
