--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -20,7 +19,7 @@
                 android:id="@+id/user_info_grade"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="54dp"
+                android:layout_marginTop="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -37,22 +36,22 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
+                    android:text="유머쪼랩ㅋ"
                     android:textColor="@color/colorWhite"
                     android:textSize="45dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@id/user_grade_guide"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:text="유머쪼랩ㅋ" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/user_grade_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:text="분발하자^^"
                     android:textColor="@color/colorWhite"
                     android:textSize="45dp"
                     app:layout_constraintStart_toStartOf="@id/user_grade"
-                    app:layout_constraintTop_toBottomOf="@id/user_grade"
-                    android:text="분발하자^^" />
+                    app:layout_constraintTop_toBottomOf="@id/user_grade" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -70,10 +69,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="17dp"
                 android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@id/humor_card"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/user_info_grade"
-                app:layout_constraintBottom_toTopOf="@id/humor_card">
+                app:layout_constraintTop_toBottomOf="@id/user_info_grade">
 
                 <TextView
                     android:id="@+id/humor_count"
@@ -82,33 +81,33 @@
                     android:layout_marginStart="34dp"
                     android:background="@drawable/rounded_background_for_humor_count"
                     android:gravity="center_horizontal"
+                    android:text="14개"
                     android:textColor="@color/colorWhite"
                     android:textSize="30dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:text="14개" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/humor_count_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="11dp"
+                    android:text="더 작성하면 등급업!"
                     android:textColor="@color/colorWhite"
                     android:textSize="16dp"
                     app:layout_constraintBottom_toBottomOf="@id/humor_count"
-                    app:layout_constraintStart_toEndOf="@id/humor_count"
-                    android:text="더 작성하면 등급업!" />
+                    app:layout_constraintStart_toEndOf="@id/humor_count" />
 
                 <ProgressBar
                     style="@style/HumorGradeProgressbar"
                     android:layout_width="0dp"
                     android:layout_height="9dp"
                     android:layout_marginTop="11dp"
+                    android:progress="70"
                     android:progressDrawable="@drawable/humor_grade_progressbar"
                     app:layout_constraintEnd_toEndOf="@id/humor_count_text"
                     app:layout_constraintStart_toStartOf="@id/humor_count"
-                    app:layout_constraintTop_toBottomOf="@id/humor_count"
-                    android:progress="70" />
+                    app:layout_constraintTop_toBottomOf="@id/humor_count" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
