--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="colorBlack">#000000</color>
     <color name="colorDarkGrey">#222222</color>
+    <color name="colorMiddleGrey">#333333</color>
     <color name="colorGrey">#404040</color>
     <color name="colorLightGrey">#737373</color>
     <color name="colorWhite">#FFFFFF</color>
