YTG-#8 [메인][레이아웃] fragment_main.xml 에 유머 카드에 임시로 title 추가해둠

--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -122,6 +122,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/user_info_progress">
 
+                <TextView
+                    android:layout_width="225dp"
+                    android:layout_height="36dp"
+                    android:background="@drawable/rounded_background_for_humor_card_title"
+                    android:gravity="center"
+                    android:text="오늘의 개그"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="13dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
